* [**] Enhance the Gravatar Quick Editor by adding features that allow users to delete and share their avatars. [#23868]
* [**] Add the capability to create an avatar using Apple Image Playground through the Gravatar Quick Editor. [#23868]
* [*] [internal] Update Gravatar SDK to 3.0.0 [#23701]
* [*] (Hidden under a feature flag) User Management for self-hosted sites. [#23768]
* [*] Add URL and ID to the Media details screen, add IDs for posts [#23887]
* [*] Reader: Enable quick access to notifications on iPad [#23882]
* [*] Add support for restricted posts in Reader [#23853]
* [*] Fix minor appearance issues in the Blaze campaign list [#23891]
* [*] Improve the sidebar animations and layout on some iPad models [#23886]
* [*] Reader: Fix a couple of rare crashes in Reader [#23907]
* [*] Reader: Fix an issue with posts shown embedded in the notifications popover on iPad [#23889]
* [*] Reader: The post cover now uses the standard aspect ratio for covers, so there is no jumping. There are also a few minor improvements to the layout and animations of the cover and the header [#23897, #23909]
* [*] Reader: Move the "Reading Preferences" button to the "More" menu [#23897]
* [*] Reader: Hide post toolbar when reading an article and fix like button animations [#23909]

25.5
-----
* [***] Use web-based sign-in flow (hidden under a feature flag) [#23675]
* [*] Enable navigating to an individual post's stats from within the "view more" screen for author stats. [#23761]
* [*] [Jetpack-only] Enable pubishing to non-Jetpack sites when sharing content to the Jetpack app. [#23778]
* [*] Use the Gravatar Quick Editor to update the avatar [#23729]

25.4
-----


25.3
-----


25.2
-----

* [*] [Jetpack-only] Stats: Made optimizations to enhance scrolling performance. [#22847]
* [*] Simplify post list context menu sections [#23356]
* [*] Fix an issue with incorrect snackbar shown when saving drafts manually [#23358]